--- a/codeforces/gym/gym_102906/.vscode/launch.json
+++ b/codeforces/gym/gym_102906/.vscode/launch.json
@@ -4,21 +4,21 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        // {
-        //     "name": "Python: Current File",
-        //     "type": "python",
-        //     "request": "launch",
-        //     "program": "f.py",
-        //     "console": "integratedTerminal",
-        //     "args": ["<", "f.in"]
-        // },
         {
-            "type": "lldb",
+            "name": "Python: Current File",
+            "type": "python",
             "request": "launch",
-            "name": "Launch",
-            "program": "${workspaceFolder}/f",
-            "args": ["<f.in"],
-            "cwd": "${workspaceFolder}",
-        }
+            "program": "f.py",
+            "console": "integratedTerminal",
+            "args": ["<", "f.in"]
+        },
+        // {
+        //     "type": "lldb",
+        //     "request": "launch",
+        //     "name": "Launch",
+        //     "program": "${workspaceFolder}/f",
+        //     "args": ["<f.in"],
+        //     "cwd": "${workspaceFolder}",
+        // }
     ]
 }
